# container-registry-cleanup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  action.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  security-audit.yml  zizmor.yml
src/container_registry_cleanup/: __main__.py  base.py  logic.py  settings.py
src/container_registry_cleanup/registry/: __init__.py  ghcr.py  harbor.py
tests/: test_base.py  test_cleanup_container_registry.py  test_logic.py  test_main.py  test_settings.py
tests/test_registry/: test_ghcr.py  test_harbor.py  test_init.py
