[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "container-registry-cleanup"
version = "0.1.2"
description = "Github Action for container registry cleanup."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
    "mypy>=1.19.0",
    "types-requests>=2.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
