[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "container-registry-cleanup"
version = "0.2.1"
description = "Github Action for container registry cleanup."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "pydantic-settings>=2.14.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
    "mypy>=1.19.0",
    "types-requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/container_registry_cleanup"]


[tool.mypy]
python_version = "3.13"
strict = true
